@@ -1,11 +1,0 @@
-[Desktop Entry]
-Encoding=UTF-8
-_Name=Menu Layout
-_Comment=Add, change, remove menu entries
-Exec=alacarte
-Terminal=false
-Type=Application
-StartupNotify=true
-Categories=GNOME;Settings;
-NotShowIn=KDE;
-Icon=alacarte
