@@ -1,3 +1,10 @@
+2006-12-07  Rob Bradford  <rob@robster.org.uk>
+
+	* alacarte.desktop.in: removed
+	* alacarte.desktop.in.in: added and include bug-buddy magic 
+	  (see #363186)
+	* configure.ac: added alacarte.desktop.in to AC_CONFIG_FILES
+
 2006-10-02  Travis Watkins  <alleykat@gmail.com>
 
 	* configure.ac: post-release bump to 0.10.2
